Completed: - Remote OData Service   + It works only with --disable-web-security flag in Chrome (needs to be   implemented as a reverce proxy in the web server)   + Filtering doesn't work on the ProductName in the remote items (works   on Quantity)

--- a/WebContent/manifest.json
+++ b/WebContent/manifest.json
@@ -36,7 +36,8 @@
 			}
 		},
 		"config": {
-	  		"invoiceLocal": "/invoices.json"
+	  		"invoiceLocal": "/invoices.json",
+	  		"invoiceRemote": "http://services.odata.org/V3/Northwind/Northwind.svc/"
 		},
 		"models": {
 				"i18n": {
@@ -71,7 +72,7 @@
 			  		"viewName": "app"
 				},
 				"detail": {
-			 		"viewName": "helloPanel"
+			 		"viewName": "invoiceListRemote"
 				}
 		  	}
 		}
